--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -30,9 +30,18 @@
         <li>8 ounces ricotta cheese</li>
         <li>8 ounces part-skim mozzarella cheese, shredded and divided</li>
         <li>2 tablespoons minced fresh Italian parsley</li>
-       
-
      </ul>
+
+     <h3>Directions</h3>
+     <ol>
+         <li>Heat a large skillet over medium high heat and add olive oil. Swirl to coat. Add the onion and saute until translucent, about 5 minutes. Add the sausage, red pepper, and mushrooms; saute until meat is cooked through, about 5 minutes.</li>
+         <br>
+         <li>Stir in the Ragu® Old World Style® Traditional sauce, broken lasagna noodles, water, and rosemary. Cover and turn heat down to medium-low.</li>
+         <br>
+         <li>Cook for 20 minutes, stirring occasionally, until the pasta is al dente. Remove the lid and add the ricotta, 2/3 of the cheese, and parsley; stir to combine. Top with remaining mozzarella and serve immediately.</li>
+         <br>
+         <li>Enjoy!</li>
+     </ol>
  </body>
 
 </html>
