modified index and added choc chip recipe

--- a/recipes/chocolate-chip-cookie.html
+++ b/recipes/chocolate-chip-cookie.html
@@ -8,6 +8,13 @@
     <body>
         <h1>Chocolate Chip Cookies</h1>
 
+        <img src="../images/chocolate-chip.jpeg">
+        <h3>Ooey Gooey Chocolate Chip Cookie</h3>
+        <p>Who doesn't love a good treat! Treat yourself to an ooey gooey chocolate chip cookie!</p>
+        <p>This cookie has all the deliciousness of the cookies your grandmother made growing up!</p>
+
         
+
+
     </body>
 </html>
