--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Odin Recipes</h1>
 
     <a href="./recipes/lasagna.html">Lasagna</a>
+    <a href="./recipes/chocolate-chip-cookie.html">Chocolate Chip Cookies</a>
 
 </body>
 
