added and completed waffle.html. finished choc chip page

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 
 <body>  
     <h1>Odin Recipes</h1>
-
-    <a href="./recipes/lasagna.html">Lasagna</a>
-    <a href="./recipes/chocolate-chip-cookie.html">Chocolate Chip Cookies</a>
-
+<ul style="list-style-type: none;">
+   <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+   <li><a href="./recipes/chocolate-chip-cookie.html">Chocolate Chip Cookies</a></li>
+   <li><a href="./recipes/waffles.html">Classic Waffles</a></li>
+</ul>
 </body>
 
 </html>
