--- a/recipes/chocolate-chip-cookie.html
+++ b/recipes/chocolate-chip-cookie.html
@@ -13,8 +13,28 @@
         <p>Who doesn't love a good treat! Treat yourself to an ooey gooey chocolate chip cookie!</p>
         <p>This cookie has all the deliciousness of the cookies your grandmother made growing up!</p>
 
+        <h3>Ingredients</h3>
         
+        <ul>
+           <li>½ cup butter, softened</li>
+           <li>¼ cup white sugar</li>
+           <li>⅓ cup brown sugar</li>
+           <li>1 egg</li>
+           <li>½ teaspoon vanilla extract</li>
+           <li>1 cup all-purpose flour</li> 
+           <li>½ teaspoon baking soda</li> 
+           <li>1 cup semisweet chocolate chips</li> 
+           <li> ½ cup coarsely chopped walnuts</li>   
+        </ul>
 
+        <h3>Directions</h3>
 
+        <ol>
+            <li>Preheat oven to 350 degrees F (175 degrees C).</li>
+            <br>
+            <li>In a medium bowl, cream together the butter, white sugar and brown sugar until smooth. Beat in the egg, then stir in the vanilla. Combine the flour and baking soda, stir into the creamed mixture. Fold in the chocolate chips and walnuts. Drop by rounded ice cream scoops onto a cookie sheet, and press down slightly to flatten. Cookies should be about 2 inches apart.</li>
+            <br>
+            <li>Bake for 11 to 14 minutes in the preheated oven. Allow cookies to cool on baking sheet for 5 minutes before removing to a wire rack to cool completely.</li>
+        </ol>
     </body>
 </html>
